--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "start": "spago run",
+    "format": "purs-tidy format-in-place src test",
     "repl": "spago repl",
     "spago": "spago",
     "test": "spago test"
@@ -17,6 +18,7 @@
   "homepage": "https://github.com/Neppord/purescript-tree-sitter-codegen#readme",
   "devDependencies": {
     "purescript": "^0.14.7",
+    "purs-tidy": "^0.7.1",
     "spago": "^0.20.7",
     "tree-sitter-swift": "^0.1.4"
   }
